2013-12-05 Clinton Wolfe 0.5.0
   Add looks_like => 'guid'

2013-11-15 Clinton Wolfe 0.4.0
   Add 'present' check
   Reformat list of checks in README

2013-11-15 Clinton Wolfe 0.3.2
   umm wait regex should not violate if given a non-string - use type check if you want that

2013-11-15 Clinton Wolfe 0.3.1
   regex check should violate, but not throw exception, when given a non-string

2013-11-12 Clinton Wolfe 0.3.0 
   Support for enum check 
   Support for proc check

2013-11-12 Clinton Wolfe 0.2.0
   Support for wildcards - *, **, ?
     Crude implementation using brute force and regexes

2013-11-10 Clinton Wolfe 0.1.0
   Initial release
     Type, Regex, Min/Max Children, Required, and LooksLike checks
     No wildcards in paths yet, planned for 0.2.0
 